# safeai-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ai-collaboration-workflow.md  dependency-roadmap.md  threat-model.md
examples/policies/: strict-ai.yaml
scripts/: install.sh
src/safeai/: __init__.py  cli.py  codex.py  detectors.py  doctor.py  extractors.py  mcp_server.py  models.py  pipeline.py  policy.py  redactor.py  report.py  vault.py
tests/: conftest.py  test_cli.py  test_codex_integration.py  test_detectors.py  test_extractors.py  test_pipeline.py  test_policy.py  test_vault.py
